syntax = "proto3";
option java_package = "com.ubtechinc.alpha";
message CmDownloadActionFileRequest {

    int32 actionId = 1;
    int32 actionType = 2;
    string actionName = 3;
    string actionFilePath = 4;
    string actionOriginalId = 5;

}

message CmDownloadActionFileResponse {

     bool isSuccess = 1;
     int32 resultCode = 2;

}
